Store the docker configuration in settings.yaml

--- a/api/config/settings-template.yaml
+++ b/api/config/settings-template.yaml
@@ -1,4 +1,6 @@
-api-keys:
+docker:
+  socketPath: '/var/run/docker.sock'
+users:
   - username: 'gregory'
     apikey: 'bm9wcXJzdHV2d3h5ego='
     role: administrator
