Sunchronze the project repository with git

--- a/api/config/settings-template.yaml
+++ b/api/config/settings-template.yaml
@@ -11,8 +11,10 @@ projects:
     description: A demonstration project that relies on Terraform/Consul
     docker-image: "lineup-terraform:alpha1"
     git:
-      repository: https://github.com/gregoryguillou/lineup.git
+      repository: github.com/gregoryguillou/lineup.git
       branch: master
+      username: gregoryguillou
+      password: "1234567880"
       directory: /demo/terraform/starter
     workspaces:
       - staging
