--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "passport": "^0.4.0",
     "passport-headerapikey": "^1.0.3",
     "passport-jwt": "^3.0.1",
+    "simple-git": "^1.91.0",
     "swagger-express-mw": "^0.1.0",
     "yamljs": "^0.3.0"
   },
