--- a/api/package.json
+++ b/api/package.json
@@ -9,12 +9,14 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bunyan": "^1.8.12",
     "dockerode": "^2.5.4",
     "express": "^4.12.3",
     "jsonwebtoken": "^8.1.1",
     "passport": "^0.4.0",
     "passport-headerapikey": "^1.0.3",
     "passport-jwt": "^3.0.1",
+    "simple-git": "^1.91.0",
     "swagger-express-mw": "^0.1.0",
     "yamljs": "^0.3.0"
   },
