demonstrate how to apply/destroy with terraform

--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -9,3 +9,6 @@ WORKDIR /app
 RUN curl -L -o terraform.zip https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
 
 COPY terraform /app/
+COPY entrypoint.sh /app/entrypoint.sh
+
+ENTRYPOINT [ "/app/entrypoint.sh" ]
