--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "dev-null": "^0.1.1",
     "nodemon": "^1.17.1",
     "should": "^7.1.0",
     "supertest": "^1.0.0",
