--- a/stack/docker-compose.yml
+++ b/stack/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - 8500:8500
     labels:
       - "lineup.role=consul"
+    restart: "always"
 
   couchbase:
     image: couchbase:5.1.0
