--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bunyan": "^1.8.12",
     "couchbase": "^2.4.4",
+    "couchnode": "^4.3.4",
     "dockerode": "^2.5.4",
     "express": "^4.12.3",
     "jsonwebtoken": "^8.1.1",
