Change couchbase settings to use parameters

--- a/api/config/settings-template.yaml
+++ b/api/config/settings-template.yaml
@@ -1,3 +1,11 @@
+api:
+  clone-directory: /tmp
+couchbase:
+  url: 127.0.0.1:8091
+  username: admin
+  password: couchbase
+  bucket: bucket
+  'bucket-password': couchbase
 docker:
   socketPath: '/var/run/docker.sock'
 jwt:
