--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -3,9 +3,8 @@ FROM debian:stretch
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
     apt-get install -y curl unzip git
 
-ARG TERRAFORM_VERSION=0.11.3
-ARG GITHUB
- 
+ARG TERRAFORM_VERSION=0.11.3 
+
 WORKDIR /app
 RUN curl -L -o terraform.zip https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
 
@@ -17,8 +16,16 @@ RUN cd /usr/local/bin && \
 COPY terraform /app/terraform
 COPY bin /app/bin
 COPY entrypoint.sh /app/entrypoint.sh
-
 ENTRYPOINT [ "/app/entrypoint.sh" ]
 
+ARG GITHUB_REPOSITORY 
+ARG GITHUB_USERNAME 
+ARG GITHUB_PASSWORD
 ARG CACHEBUST=1
-RUN git clone ${GITHUB} /github
+
+RUN echo "machine github.com" >~/.netrc && \
+    echo "login ${GITHUB_USERNAME}" >>~/.netrc && \
+    echo "password ${GITHUB_PASSWORD}" >>~/.netrc && \
+    chmod 600 ~/.netrc && \
+    git clone ${GITHUB_REPOSITORY} /github/repository && \
+    rm -f ~/.netrc
