--- a/stack/.env.template
+++ b/stack/.env.template
@@ -1,2 +1,3 @@
-CREDENTIALS='me:xxx'
-REPOSITORY="github.com/gregoryguillou/terraform-lineup.git"
+GITHUB_USERNAME="me"
+GITHUB_PASSWORD="xxx"
+GITHUB_REPOSITORY="https://github.com/gregoryguillou/terraform-lineup.git"
