--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,7 @@
   "main": "app.js",
   "dependencies": {
     "bunyan": "1.8.12",
-    "couchbase": "2.4.5",
+    "couchbase": "^2.4.5",
     "couchnode": "4.3.4",
     "dockerode": "2.5.4",
     "express": "4.16.2",
