--- a/stack/docker/docker-compose.yml
+++ b/stack/docker/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.2'
 
 services:
-  deck-api:
-    image: deck-api:beta
+  terraform-deck:
+    image: gregoryguillou/terraform-deck:v0.1.3
     ports:
       - 10010:10010
     volumes:
@@ -15,6 +15,16 @@ services:
       SECRETORKEY: secret
       CONSUL_IP: "172.28.0.1"
 
+  terraform-demo:
+    image: gregoryguillou/terraform-deck:v0.1.3-demo
+    depends_on:
+      - consul
+    environment:
+      CONSUL_IP: consul
+    command: ["sleep", "10"]
+    entrypoint: ["/bin/bash"]
+    restart: "no"
+
   consul:
     image: consul:1.0.6
     environment:
@@ -26,17 +36,18 @@ services:
     restart: "always"
 
   couchbase:
-    image: couchbase:5.1.0
+    image: couchbase:community-5.0.1
     ports:
       - 8091-8094:8091-8094
       - 11210:11210
     restart: "always"
 
   couchbase-setup:
-    image: couchbase:5.1.0
+    image: couchbase:community-5.0.1
     volumes:
      - $PWD/couchbase-setup.sh:/script/couchbase-setup.sh
     depends_on:
       - couchbase
     command: ['/script/couchbase-setup.sh']
     restart: "no"
+
