--- a/stack/docker/docker-compose.yml
+++ b/stack/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.2'
 
 services:
   terraform-deck:
-    image: gregoryguillou/terraform-deck:v0.1.3
+    image: gregoryguillou/terraform-deck:${VERSION:-v0.1.3}
     ports:
       - 10010:10010
     volumes:
@@ -13,10 +13,11 @@ services:
       - couchbase
     environment:
       SECRETORKEY: secret
+      VERSION: v0.1.3
       CONSUL_IP: "172.28.0.1"
 
   terraform-demo:
-    image: gregoryguillou/terraform-deck:v0.1.3-demo
+    image: gregoryguillou/terraform-deck:${VERSION:-v0.1.3}-demo
     depends_on:
       - consul
     environment:
