--- a/stack/docker/docker-compose.yml
+++ b/stack/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.2'
 
 services:
-  terraform-deck:
+  deck:
     image: "gregoryguillou/terraform-deck:${VERSION:-v0.1.3}"
     ports:
       - 10010:10010
@@ -11,14 +11,11 @@ services:
     depends_on:
       - consul
       - couchbase
-    command:
-      - npm
-      - "${DECK_MODE:-start}"
     environment:
       SECRETORKEY: secret
       CONSUL_IP: "172.28.0.1"
 
-  terraform-demo:
+  demo:
     image: "gregoryguillou/terraform-deck:${VERSION:-v0.1.3}-demo"
     depends_on:
       - consul
