--- a/stack/docker/docker-compose.yml
+++ b/stack/docker/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - consul
     environment:
       CONSUL_IP: consul
-    command: ["sleep", "10"]
+    command: ["-c", "sleep 10"]
     entrypoint: ["/bin/bash"]
     restart: "no"
 
