--- a/api/config/settings-template.yaml
+++ b/api/config/settings-template.yaml
@@ -17,7 +17,7 @@ projects:
   - type: terraform
     name: demonstration
     description: A demonstration project that relies on Terraform/Consul
-    docker-image: "deck-terraform:v0.1.3-demo"
+    docker-image: "gregoryguillou/terraform-deck:latest-demo"
     git:
       repository: github.com/gregoryguillou/terraform-deck.git
       branch: master
@@ -31,23 +31,12 @@ projects:
       - development
     lifecycle:
       cwd: projects/demonstration
-      before-start:
-        - echo "Ready to kick-off a creation container..."
-      pre-start:
-        - echo "Ready to begin..."
-      on-success:
-        - echo "The environment was successful"
-      on-failure:
-        - echo "You've screwed up!"
-      post-finish:
-        - echo "Ready to begin..."
+      getenv:
+        - ./getenv.sh {{deck.WORKSPACE}}
       status:
         - ./status.sh -w {{deck.WORKSPACE}}
-    # Define the environment variables that should be used when running the project
-    # management commands (i.e. apply, destroy, list and check)
     setenv:
-      - CONSUL_IP={{env.CONSUL_IP}}
-      - AWS_PROFILE={{env.DEMONSTRATION__AWS_PROFILE}}
+      - CONSUL_IP={{env.CONSUL}}
 users:
   - username: 'gregory'
     apikey: 'notsosecretadminkey'
