--- a/stack/docker/docker-compose.yml
+++ b/stack/docker/docker-compose.yml
@@ -11,8 +11,7 @@ services:
     depends_on:
       - consul
       - couchbase
-    environment:
-      SECRETORKEY: secret
+    restart: "always"
 
   demo:
     image: "gregoryguillou/terraform-deck:${VERSION:-v0.1.4}-demo"
@@ -39,12 +38,14 @@ services:
     ports:
       - 8091-8094:8091-8094
       - 11210:11210
+    labels:
+      - "deck.role=couchbase-server"
     restart: "always"
 
   couchbase-setup:
     image: couchbase:community-5.0.1
     volumes:
-     - $PWD/couchbase-setup.sh:/script/couchbase-setup.sh
+      - $PWD/couchbase-setup.sh:/script/couchbase-setup.sh
     depends_on:
       - couchbase
     command: ['/script/couchbase-setup.sh']
