--- a/bots/package.json
+++ b/bots/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "@slack/client": "4.0.0",
     "body-parser": "1.18.2",
+    "bunyan": "^1.8.12",
     "dotenv": "5.0.1",
     "express": "4.12.3",
-    "multer": "1.3.0"
+    "multer": "1.3.0",
+    "request": "^2.85.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "mocha": "^5.0.5",
     "nodemon": "1.17.1",
     "should": "7.1.0",
     "supertest": "1.0.0"
@@ -22,6 +26,6 @@
   "scripts": {
     "start": "node app.js",
     "dev": "NODE_ENV=development npx nodemon app.js",
-    "test": "echo \"Ough\""
+    "test": "npx mocha"
   }
 }
