--- a/bots/Dockerfile
+++ b/bots/Dockerfile
@@ -1,9 +1,11 @@
 FROM node:9.8.0-stretch
 
 EXPOSE 8080
+CMD [ "npm", "start" ]
 
 WORKDIR /app
-COPY . /app/
-RUN npm install --production=true
+COPY package.json /app/
+RUN npm install --production
 
-CMD [ "npm", "start" ]
+COPY . /app/
+
