--- a/bots/package.json
+++ b/bots/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deck-bot",
+  "name": "terraform-api-bot",
   "version": "0.1.3",
   "private": true,
   "description": "A Slackbot that enables you to access Terraform",
