--- a/stack/.env.template
+++ b/stack/.env.template
@@ -1,3 +1,3 @@
-GITHUB_USERNAME="me"
-GITHUB_PASSWORD="xxx"
-GITHUB_REPOSITORY="https://github.com/gregoryguillou/terraform-deck.git"
+GITHUB_USERNAME="anonymous"
+GITHUB_PASSWORD="xyz"
+GITHUB_REPOSITORY="https://github.com/gregoryguillou/terraform-api.git"
