--- a/stack/docker/docker-compose.yml
+++ b/stack/docker/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.2'
 
 services:
-  deck:
-    image: "gregoryguillou/terraform-deck:${VERSION:-v0.1.6}"
+  terraform-api:
+    image: "gregoryguillou/terraform-api:${VERSION:-v0.1.6}"
     ports:
       - 10010:10010
     volumes:
@@ -14,23 +14,23 @@ services:
     restart: "always"
 
   bots:
-    image: "gregoryguillou/terraform-deck:${VERSION:-v0.1.6}-bots"
+    image: "gregoryguillou/terraform-api:${VERSION:-v0.1.6}-bots"
     ports:
       - 8080:8080
     volumes:
      - $PWD/../../bots/config/settings.yaml:/app/config/settings.yaml
     depends_on:
-      - deck
+      - terraform-api
       - couchbase
     restart: "always"
 
   runtime:
-    image: "gregoryguillou/terraform-deck:${VERSION:-v0.1.6}-runtime"
+    image: "gregoryguillou/terraform-api:${VERSION:-v0.1.6}-runtime"
     depends_on:
       - consul
     environment:
       CONSUL_IP: consul
-      GITHUB_REPOSITORY: "https://github.com/gregoryguillou/terraform-deck-stacks.git"
+      GITHUB_REPOSITORY: "https://github.com/gregoryguillou/terraform-stacks.git"
     command: ["-c", "sleep 10"]
     entrypoint: ["/bin/bash"]
     restart: "no"
@@ -42,7 +42,7 @@ services:
     ports:
       - 8500:8500
     labels:
-      - "deck.role=consul"
+      - "terraform-api.role=consul"
     restart: "always"
 
   couchbase:
@@ -51,7 +51,7 @@ services:
       - 8091-8094:8091-8094
       - 11210:11210
     labels:
-      - "deck.role=couchbase-server"
+      - "terraform-api.role=couchbase-server"
     restart: "always"
 
   couchbase-setup:
