Add a route and tests to display the version from a script

--- a/api/config/settings-template.yaml
+++ b/api/config/settings-template.yaml
@@ -41,6 +41,8 @@ projects:
         - CONSUL_IP={{env.CONSUL}}
       status:
         - ./status.sh -w {{terraform-api.WORKSPACE}}
+      version:
+        - ./version.sh -w {{terraform-api.WORKSPACE}}
 users:
   - username: 'gregory'
     apikey: 'notsosecretadminkey'
