--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "bunyan": "1.8.12",
     "couchbase": "^2.4.5",
     "couchnode": "4.3.4",
+    "cron": "^1.3.0",
     "dockerode": "2.5.4",
     "express": "4.16.2",
     "jsonwebtoken": "8.2.0",
@@ -30,6 +31,7 @@
   },
   "scripts": {
     "start": "node app.js",
+    "scheduler": "node app.js -scheduler",
     "test": "BUNYAN_LOG_LEVEL=fatal swagger project test"
   }
 }
