--- a/api/package.json
+++ b/api/package.json
@@ -11,12 +11,14 @@
     "bunyan": "1.8.12",
     "couchbase": "^2.4.5",
     "couchnode": "4.3.4",
+    "cron": "^1.3.0",
     "dockerode": "2.5.4",
     "express": "4.16.2",
     "jsonwebtoken": "8.2.0",
     "passport": "0.4.0",
     "passport-headerapikey": "1.0.3",
     "passport-jwt": "3.0.1",
+    "redis": "^2.8.0",
     "simple-git": "1.92.0",
     "swagger-express-mw": "0.1.0",
     "yamljs": "0.3.0"
@@ -30,6 +32,7 @@
   },
   "scripts": {
     "start": "node app.js",
+    "scheduler": "node app.js -scheduler",
     "test": "BUNYAN_LOG_LEVEL=fatal swagger project test"
   }
 }
