--- a/api/package.json
+++ b/api/package.json
@@ -15,12 +15,14 @@
     "dockerode": "2.5.4",
     "express": "4.16.2",
     "jsonwebtoken": "8.2.0",
+    "node-cron": "^1.2.1",
     "passport": "0.4.0",
     "passport-headerapikey": "1.0.3",
     "passport-jwt": "3.0.1",
     "redis": "^2.8.0",
     "simple-git": "1.92.0",
     "swagger-express-mw": "0.1.0",
+    "uuid": "^3.2.1",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
